--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <include
         android:id="@+id/common_titler"
         layout="@layout/wb_titler"
@@ -27,19 +28,32 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="20dp"
-            android:layout_width="35dp"
-            android:layout_height="35dp"/>
+            android:layout_marginStart="10dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"/>
 
         <TextView
             android:id="@+id/tvLoadMsg"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/ivRefreshBtn"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="15dp"
+            android:textSize="@dimen/text_size_2"
             android:text="正在加载.."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+        
+        <ImageView
+            android:id="@+id/ivOpen"
+            tools:visibility="visible"
+            android:visibility="gone"
+            android:src="@drawable/ic_open"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="10dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
