--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -16,6 +16,25 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/ivOpen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="invisible"
+        tools:visibility="visible"
+        android:src="@drawable/ic_open"
+        android:tintMode="src_in"
+        android:tint="#FFF"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="60dp"
+        app:fabSize="normal"
+        app:elevation="5dp"
+        app:backgroundTint="@color/colorPrimary"
+        app:rippleColor="@color/colorPrimary"
+        />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottomPanel"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,18 +61,6 @@
             android:text="正在加载.."
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-        
-        <ImageView
-            android:id="@+id/ivOpen"
-            tools:visibility="visible"
-            android:visibility="gone"
-            android:src="@drawable/ic_open"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="10dp"
-            android:layout_width="32dp"
-            android:layout_height="32dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
